<resources>
    <string name="app_name">MOV App</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="presale">Pre Sale</string>
    <string name="start">MEMULAI</string>
    <string name="cashless">Cashless</string>
    <string name="signup">DAFTAR AKUN BARU</string>
    <string name="sign_in">MASUK AKUN</string>
    <string name="signin">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user">ryanardyansyah</string>
    <string name="name">Name</string>
    <string name="names">Ryan Ardyansyah</string>
    <string name="email">Email</string>
    <string name="emails">ryanardyansyah17@gmail.com</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome,</string>
    <string name="upload_nanti">UPLOAD NANTI</string>
    <string name="save_and_next"><![CDATA[SIMPAN & LANJUTKAN]]></string>
    <string name="user_picture">user picture</string>
    <string name="money">IDR 280.000</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="home">Home</string>
    <string name="ticket">Ticket</string>
    <string name="profile">Profile</string>
    <string name="poster">Poster</string>
    <string name="choose">PILIH BANGKU</string>
    <string name="choose_place">Pilih Bangku</string>
    <string name="buy_ticket">Beli Tiket</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="empty">Empty</string>
    <string name="d">D</string>
    <string name="line">Line</string>
    <string name="avengers_end_game">Avengers : End Game</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="seat">Seat</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="now_buy">BAYAR SEKARANG</string>
    <string name="cancel">BATALKAN</string>
    <string name="total_belance">Total Belance</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="desc_ticket_success">Tiket telah berhasil dibeli dan\nselamat menikmati film</string>
    <string name="look_ticket">LIHAT TIKET</string>
    <string name="new_data_save">SIMPAN DATA BARU</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo tersedia</string>
    <string name="transaksi_list">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>